<resources>
    <string name="app_name">Antre Deux Vins</string>
    <string name="infrastructure_textview_name">Server Name</string>
    <string name="infrastructure_textview_ip">Server IP</string>
    <string name="server_textview_name">Server Name</string>
    <string name="server_textview_ip">Server ip</string>
    <string name="server_button_start">Start</string>
    <string name="server_button_stop">Stop</string>
    <string name="server_button_restart">Restart</string>
    <string name="login_edittext_mail">Mail</string>
    <string name="login_edittext_password">Password</string>
    <string name="login_button_connexion">Connexion</string>
    <string name="txt_Show">Progressing Please wait...</string>
    <string name="server_name">Server Name</string>
    <string name="server_ip">Server IP</string>
    <string name="server_name_detail">Server Name</string>
    <string name="server_ip_detail">Server ip</string>
    <string name="loggin_textview_link">Pas de compte ? Inscrivez-vous</string>
    <string name="dialog_message">Voulez-vous vous deconnecter ?</string>
    <string name="dialog_title">Deconnexion</string>
    <string name="ok">Oui</string>
    <string name="cancel">Non</string>
    <string name="server_textview_status">Server Status</string>
    <string name="title_activity_login">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register_edittext_mail">Mail</string>
    <string name="register_edittext_name">Name</string>
    <string name="register_edittext_password">Password</string>
    <string name="register_edittext_confirmpassword">Confirm Password</string>
    <string name="register_valid_form">Register</string>
    <string name="login_valid_form">Login</string>
    <string name="title_app">Antre Deux Vins</string>
    <string name="login_error_messageMail">Adresse mail non valide</string>
    <string name="title_activity_cellar">CellarActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="res_list_view_single_name">Wine Name</string>
    <string name="nom_du_vin">Nom du vin</string>
    <string name="viande">Viande</string>
    <string name="fromage">fromage</string>
    <string name="crustace">crustace</string>
    <string name="meilleur_avec">Meilleur avec :</string>
    <string name="millesime">Millesime</string>
    <string name="volume">Volume</string>
    <string name="type">Type</string>
    <string name="rouge">Rouge</string>
    <string name="blanc">Blanc</string>
    <string name="ros">Rosé</string>
    <string name="inscrivez_vous">Vous n\'avez pas de comptes ? &lt;u>Inscrivez-vous !&lt;/u></string>
    <string name="deconnecter">Disconnect</string>
    <string name="Bonjour">Hello :</string>
    <string name="email">mail :</string>


    <string name="action_settings">Settings</string>
    <string name="my_cart">My Cart</string>
    <string name="delete">DELETE</string>


</resources>
