<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/user_account2"
            android:layout_gravity="center"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:text="@string/Bonjour"/>

            <TextView
                android:id="@+id/user_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:text="Name"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:text="@string/email"/>

            <TextView
                android:id="@+id/user_usermail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:text="Mail"/>



        </LinearLayout>





    </LinearLayout>
        <Button
            android:id="@+id/buttonDeconnexion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="40dp"
            android:gravity="center"
            android:text="@string/deconnecter"
            android:textColor="@color/backgroungColor"
            android:background="@color/colorPrimary"
            android:onClick="DisconnectOnClick"/>

</RelativeLayout>
