<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroungColor"
    tools:context="com.ingesup.fabienlebon.antredeuxvins.MainActivity">

    <LinearLayout
        android:id="@+id/LayoutPresentation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            app:srcCompat="@drawable/antredeuxvins_logo" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="50dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:background="@drawable/linaerlayout_border">

        <!--  login Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:id="@+id/login_TIL_Mailwrapper"
            >

            <EditText
                android:id="@+id/editTextMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_edittext_mail"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <!--  Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:id="@+id/login_TIL_pswWrapper">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_edittext_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonConnexion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:text="@string/login_valid_form"
            android:background="@color/colorPrimary"
            android:onClick="loginOnClick"
            android:textColor="@color/backgroungColor" />

        <TextView
            android:id="@+id/textViewLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Vous n'avez pas de comptes ? Inscrivez-vous !"
            android:onClick="loginToRegisterOnclick"
            />

    </LinearLayout>

</RelativeLayout>
